Fixed overflow issue with the columns, also increased the size of the slider

--- a/slurpsup/src/app/shared/components/menu/menu.component.css
+++ b/slurpsup/src/app/shared/components/menu/menu.component.css
@@ -4,7 +4,7 @@
     border: 2px solid #219cee;
     position: fixed;
     right: 0;
-    top: 90%;
+    top: 87%;
     margin-right: 5%;
     z-index: 5;
     font-size: 30px;
